fix: docker config

--- a/docker-config.json
+++ b/docker-config.json
@@ -82,6 +82,7 @@
                 "wincred",
                 "pass",
                 "file",
+                "desktop.exe",
                 "desktop"
             ],
             "default": "desktop"
